# petstore-test-python

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  allurerc.yml  docker-compose.postgres.yml  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  summary.json
.allure/: allure-history.jsonl
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml
21/: index.html
21/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
21/export/: influxDbData.txt  prometheusData.txt
21/history/: retry-trend.json
21/widgets/: categories-trend.json  executors.json  history-trend.json  severity.json  status-chart.json  summary.json
23/: index.html
23/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
23/export/: influxDbData.txt  prometheusData.txt
23/history/: categories-trend.json  history.json
23/widgets/: duration-trend.json  executors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  summary.json
api-tests/: index.html
cicd/: index.html
data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
data/attachments/: 1c177b5b69aee307.txt  1e0528edb146bd40.txt  1f269b9640d305b5.txt  23f83d8fecc820d0.txt  26abe9eebabab3b7.txt  2d95e3c423a9be3a.txt  35cc0091915a02dd.txt  37846d5ad837cb16.txt  3809cc3da3b6bc28.txt  3bb7be2f872d382b.txt  41c38ef18bb54ba3.txt  44771999e0809ad4.txt  46272bf01a598e3.txt  4d962b82dbd3aa89.txt  4f0fcb084c8c01ca.txt  51d4f692f0fce4d7.txt  52fe2208d84a1d6b.txt  5d51fec9420622ff.txt  74288d22c7ebc809.txt  77326137a929a22e.txt  77c596e6166b4db2.txt  78dbf96104575a7a.txt  7b7b086006c4089a.txt  7c0d579572fd0ffd.txt  7d488cef5e3b2bad.txt  7f17a5ab01494278.txt  80c561cd2a9d6ee6.txt  81570baca45b0659.txt  8214e388d3b3d4e1.txt  825cb07a293a7690.txt  83256b0d11fc7a59.txt  84270058db15351c.txt  84d83b7132f68257.txt  89b2bc4406ba49f7.txt  942de1528159927.txt  9520a59ed65dcf48.txt  99f74cf56eadbade.txt  9d8fd037541d9de6.txt  9dea0afa8dcbae7e.txt  ab32d8341b186e3d.txt  (+14 more)
data/history/: 10173379-11e0-490c-92a3-43bbe1287c37.json  16e753bd-2732-4429-99fa-ef0ab05e7bc5.json  2c621d62-59ae-4e4b-93b4-4407bbe2823f.json  3dcd9d05-0980-4431-bcdf-772b6a9fb4c8.json  50e74681-1396-4f9e-89b7-ab82e81daa52.json  57ff3799-0dfc-4392-b69e-6dbab13afdfd.json  5ecf2823-22eb-4169-994f-057ff5f9e068.json  5f6d0f68-f17e-48ce-9cfc-1b90288aca10.json  6c98ce01-c0c0-4bc3-b4ee-b19b79ba747c.json  84d5ec1c-1a4c-4bb1-b092-353802ce8e36.json  98b741fa-9ba4-4214-b20f-c359da07e519.json  a4409309-233a-4516-bab8-7652c438bfbc.json  a91cf7d6-b9d0-4f98-825c-219b13c6b8b9.json  b45ffea7-965c-4321-a522-bc9e3f17a203.json  e79324f9-19fa-41f4-bff3-d78d79b5bf64.json  e86ec7ee-54f8-4a05-8ba4-15c54db82f1d.json  e91543f2-cfe0-4132-84ec-8417610e9d6a.json  f166511c-969c-43e7-8fe1-b225636fa777.json  f789992a-a42d-49c6-9c03-51c15b6bdaea.json  fbfd3ef5-063c-4457-9729-976b34823b32.json
data/test-cases/: 12023f86adc625a0.json  13196151fba875e7.json  150c9349b64272b1.json  166f614a3fd8fadb.json  263e6f5d438f28f7.json  2af9700dd89115ef.json  426ec803775fafcf.json  4a79c6c479e93299.json  510bf76e106aaf4f.json  534d920aa33cc510.json  604fd02d1858c4e0.json  6303a79d951e9f2f.json  68c326bbdbc8a8e0.json  75d099b8e4d1e244.json  77871ff1e233d5e1.json  (+12 more)
docs/: api-tests.md  cicd.md  e2e-tests.md  framework-reference.md  getting-started.md  index.md  integration-tests.md  performance-tests.md  ui-tests.md
e2e-tests/: index.html
export/: influxDbData.txt  prometheusData.txt
framework/: __init__.py  api_client.py  assertions.py  factories.py  interfaces.py  ui_client.py
framework-reference/: index.html
getting-started/: index.html
history/: history.json
integration-tests/: index.html
last-history/: duration-trend.json  history.json
performance-tests/: index.html
search/: search_index.json
tests/: conftest.py
ui-tests/: index.html
widgets/: allure_environment.json  behaviors.json  categories.json  charts.json  duration.json  environment.json  nav.json  pie_chart.json  severity.json  statistic.json  suites.json  summary.json  timeline.json  tree-filters.json  tree.json
(+186 files in other folders)
